--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- 스와이퍼  -->
   <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <!-- CSS파일  -->
-  <link rel="stylesheet" href="/★_project/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
