--- a/index.html
+++ b/index.html
@@ -278,10 +278,16 @@
     </ul>
     <div class="con-4-image-area">
       <div class="con-4-items">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
+        <div class="item item1"></div>
+        <div class="item item2"></div>
+        <div class="item item3"></div>
+        <div class="item item4"></div>
+        <div class="item item5"></div>
+        <div class="item6">
+          <span class="material-icons">
+            more_horiz
+          </span>
+        </div>
       </div>
     </div>
   </section>
@@ -292,7 +298,7 @@
   </div>
   <section class="con-5">
     <div class="inner">
-      <img src="./img/Untitled-1.png" alt="">
+      <img src="./img/Untitled-2.png" alt="">
       <div class="con-5-text">
         <h2 class="c-sub-title">Sit amet consectetur</h2>
         <h1 class="c-title">THIS IS A CALLL TO ACTION</h1>
