--- a/index.html
+++ b/index.html
@@ -318,8 +318,92 @@
           </div>
       </div>
     </div>
-    <div class="con-5-bg">
-
+    <div class="con-5-bg"></div>
+  </section>
+  <section class="bg">
+    <div class="inner bg-items">
+      <div class="bg-item">
+        <span class="material-icons">
+          business_center
+        </span>
+        <h2 class="bg-sub-title">FINISHED PROJECTS</h2>
+        <h1 class="bg-main-title">4672</h1>
+      </div>
+      <div class="bg-item">
+        <span class="material-icons">
+          photo_camera
+        </span>
+        <h2 class="bg-sub-title">PHOTOGRAHS</h2>
+        <h1 class="bg-main-title">5752</h1>
+      </div>
+      <div class="bg-item">
+        <span class="material-icons">
+          logo_dev
+        </span>
+        <h2 class="bg-sub-title">LOGO DEV</h2>
+        <h1 class="bg-main-title">2522</h1>
+      </div>
+      <div class="bg-item">
+        <span class="material-icons">
+          local_cafe
+        </span>
+        <h2 class="bg-sub-title">COPS OF COFFEE</h2>
+        <h1 class="bg-main-title">3539</h1>
+      </div>
+    </div>
+  </section>
+  <section class="inner con-6">
+        <!-- Slider main container -->
+    <div class="swiper">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper con-6-area">
+        <!-- Slides -->
+        <div class="swiper-slide con-6-text">
+          <h1 class="bg-main-title">THIS IS A CALLL TO ACTION</h1>
+          <h2 class="bg-sub-title">FINISHED PROJECTS</h2>
+          <h2 class="bg-sub-title">
+            <span style="color: #868686;">
+            Lorem ipsum, dolor sit amet consectetur adipisicing<br>
+            elit. Laboriosam recusandae dolores assumenda,<br>
+            laudantium architecto at minus dig
+          </span>
+          </h2>
+          <span class="material-icons">
+            inbox
+          </span>
+        </div>
+        <div class="swiper-slide con-6-text">
+                    <h1 class="bg-main-title">THIS IS A CALLL TO ACTION</h1>
+          <h2 class="bg-sub-title">FINISHED PROJECTS</h2>
+          <h2 class="bg-sub-title">
+            <span style="color: #868686;">
+            Lorem ipsum, dolor sit amet consectetur adipisicing<br>
+            elit. Laboriosam recusandae dolores assumenda,<br>
+            laudantium architecto at minus dig
+          </span>
+          </h2>
+          <span class="material-icons">
+            inbox
+          </span>
+        </div>
+        <div class="swiper-slide con-6-text">
+                    <h1 class="bg-main-title">THIS IS A CALLL TO ACTION</h1>
+          <h2 class="bg-sub-title">FINISHED PROJECTS</h2>
+          <h2 class="bg-sub-title">
+            <span style="color: #868686;">
+            Lorem ipsum, dolor sit amet consectetur adipisicing<br>
+            elit. Laboriosam recusandae dolores assumenda,<br>
+            laudantium architecto at minus dig
+          </span>
+          </h2>
+          <span class="material-icons">
+            inbox
+          </span>
+        </div>
+      </div>
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
   </section>
   <!-- 푸터 영역 -->
