24일 작업 및 수정사항

--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
       </div>
       <div class="header-menu">
         <ul class="menu">
-          <li>안내</li>
-          <li>서비스</li>
-          <li>스토어</li>
-          <li>히스토리</li>
-          <li>커뮤니티</li>
+          <li>Info</li>
+          <li>Service</li>
+          <li>Store</li>
+          <li>History</li>
+          <li>Community</li>
         </ul>
       </div>
       <div class="utility">
         <ul class="menu">
-          <li>로그인</li>
-          <li>회원가입</li>
-          <li>고객센터</li>
+          <li>Login</li>
+          <li>Join us</li>
+          <li>CS</li>
         </ul>
       </div>
     </div>
@@ -93,40 +93,28 @@
 
   <!-- 섹션 영역 -->
   <section class="inner con-1">
-    <div class="scroll">
+    <!-- <div class="scroll">
       <h2>scroll down</h2>
       <svg class="mouse" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M8 3C8.27614 3 8.5 3.22386 8.5 3.5V5.5C8.5 5.77614 8.27614 6 8 6C7.72386 6 7.5 5.77614 7.5 5.5V3.5C7.5 3.22386 7.72386 3 8 3ZM12 11C12 13.2091 10.2091 15 8 15C5.79086 15 4 13.2091 4 11V5C4 2.79086 5.79086 1 8 1C10.2091 1 12 2.79086 12 5V11ZM8 0C5.23858 0 3 2.23858 3 5V11C3 13.7614 5.23858 16 8 16C10.7614 16 13 13.7614 13 11V5C13 2.23858 10.7614 0 8 0Z" fill="#32323B"/>
         </svg>      
-    </div>
-    <!-- <div class="badge">
-      <div class="circle insta">
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M10.0009 0C7.28508 0 6.94424 0.0118753 5.87756 0.0604175C4.81297 0.109168 4.08629 0.277711 3.45045 0.525006C2.79274 0.780425 2.23481 1.1221 1.67898 1.67814C1.12272 2.23398 0.78105 2.7919 0.524797 3.44941C0.276878 4.08546 0.108126 4.81234 0.0602089 5.87652C0.0125 6.9432 0 7.28424 0 10.0001C0 12.716 0.0120837 13.0558 0.0604175 14.1224C0.109376 15.187 0.27792 15.9137 0.525006 16.5495C0.780633 17.2073 1.1223 17.7652 1.67835 18.321C2.23398 18.8773 2.7919 19.2198 3.4492 19.4752C4.08546 19.7225 4.81234 19.891 5.87673 19.9398C6.94341 19.9883 7.28403 20.0002 9.99969 20.0002C12.7158 20.0002 13.0556 19.9883 14.1222 19.9398C15.1868 19.891 15.9143 19.7225 16.5506 19.4752C17.2081 19.2198 17.7652 18.8773 18.3208 18.321C18.8771 17.7652 19.2187 17.2073 19.475 16.5498C19.7208 15.9137 19.8896 15.1868 19.9396 14.1226C19.9875 13.056 20 12.716 20 10.0001C20 7.28424 19.9875 6.94341 19.9396 5.87673C19.8896 4.81213 19.7208 4.08546 19.475 3.44962C19.2187 2.7919 18.8771 2.23398 18.3208 1.67814C17.7646 1.12189 17.2083 0.780217 16.55 0.525006C15.9125 0.277711 15.1854 0.109168 14.1208 0.0604175C13.0541 0.0118753 12.7145 0 9.99781 0H10.0009ZM9.10385 1.8021C9.3701 1.80169 9.66718 1.8021 10.0009 1.8021C12.671 1.8021 12.9874 1.81169 14.0418 1.8596C15.0168 1.90419 15.546 2.06711 15.8985 2.20398C16.3652 2.38523 16.6979 2.6019 17.0477 2.95191C17.3977 3.30191 17.6143 3.63525 17.796 4.10192C17.9329 4.454 18.096 4.98318 18.1404 5.95819C18.1883 7.01236 18.1987 7.32903 18.1987 9.99781C18.1987 12.6666 18.1883 12.9833 18.1404 14.0374C18.0958 15.0124 17.9329 15.5416 17.796 15.8937C17.6148 16.3604 17.3977 16.6927 17.0477 17.0425C16.6977 17.3925 16.3654 17.6091 15.8985 17.7904C15.5464 17.9279 15.0168 18.0904 14.0418 18.135C12.9876 18.1829 12.671 18.1933 10.0009 18.1933C7.3307 18.1933 7.01424 18.1829 5.96006 18.135C4.98505 18.09 4.45588 17.9271 4.10317 17.7902C3.6365 17.6089 3.30316 17.3923 2.95316 17.0423C2.60315 16.6923 2.38648 16.3598 2.20481 15.8929C2.06794 15.5408 1.90481 15.0116 1.86044 14.0366C1.81252 12.9824 1.80294 12.6658 1.80294 9.99531C1.80294 7.32487 1.81252 7.00987 1.86044 5.95569C1.90502 4.98068 2.06794 4.4515 2.20481 4.099C2.38607 3.63233 2.60315 3.29899 2.95316 2.94899C3.30316 2.59899 3.6365 2.38232 4.10317 2.20065C4.45567 2.06315 4.98505 1.90065 5.96006 1.85585C6.88257 1.81419 7.24008 1.80169 9.10385 1.7996V1.8021ZM15.3389 3.46254C14.6764 3.46254 14.1389 3.99942 14.1389 4.66213C14.1389 5.32464 14.6764 5.86214 15.3389 5.86214C16.0014 5.86214 16.5389 5.32464 16.5389 4.66213C16.5389 3.99962 16.0014 3.46212 15.3389 3.46212V3.46254ZM10.0009 4.86463C7.16487 4.86463 4.86547 7.16403 4.86547 10.0001C4.86547 12.8362 7.16487 15.1345 10.0009 15.1345C12.837 15.1345 15.1356 12.8362 15.1356 10.0001C15.1356 7.16403 12.8368 4.86463 10.0007 4.86463H10.0009ZM10.0009 6.66674C11.8418 6.66674 13.3343 8.15904 13.3343 10.0001C13.3343 11.841 11.8418 13.3335 10.0009 13.3335C8.15988 13.3335 6.66757 11.841 6.66757 10.0001C6.66757 8.15904 8.15988 6.66674 10.0009 6.66674Z" fill="white"/>
-          </svg>
-      </div>
-      <div class="circle share">
-        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M13.75 3.125C13.75 1.39911 15.1491 0 16.875 0C18.6009 0 20 1.39911 20 3.125C20 4.85089 18.6009 6.25 16.875 6.25C15.9263 6.25 15.0764 5.82727 14.5033 5.15991L6.10623 9.06025C6.19964 9.35686 6.25 9.67255 6.25 10C6.25 10.3275 6.19964 10.6431 6.10623 10.9397L14.5033 14.8401C15.0764 14.1727 15.9263 13.75 16.875 13.75C18.6009 13.75 20 15.1491 20 16.875C20 18.6009 18.6009 20 16.875 20C15.1491 20 13.75 18.6009 13.75 16.875C13.75 16.5475 13.8004 16.2319 13.8938 15.9353L5.49674 12.0349C4.92362 12.7023 4.07368 13.125 3.125 13.125C1.39911 13.125 0 11.7259 0 10C0 8.27411 1.39911 6.875 3.125 6.875C4.07368 6.875 4.92362 7.29773 5.49674 7.96509L13.8938 4.06475C13.8004 3.76814 13.75 3.45245 13.75 3.125Z" fill="white"/>
-          </svg>          
-      </div>
     </div> -->
     <div class="con-1-text">
       <h1 class="title">
-        나만의 패션 취향만큼<br>
-        나만이 가장 잘 알수 있으니까
+        Professional Web Tips
+        Exclusive Retina Ready Design
       </h1>
       <h2 class="sub-title">
-        다양한 패션 취향만큼,쇼핑의 니즈도 제각각이죠.<br>
-        모두의 쇼핑 니즈를 채워 줄 다섯 가지 쇼핑 공간을 헌데 모았습니다.<br>
-        백화점, 아울렛, 브랜드 직영몰, 소호&스트릿, 디자이너관까지<br>
-        내 취향과 니즈는 단순하지 않지만 패션은 패션타운 하나로 끝.
+        Lorem ipsum, dolor sit amet consectetur adipisicing<br>
+        elit. Laboriosam recusandae dolores assumenda,
+        laudantium architecto at minus dig
+        Lorem ipsum.
       </h2>
 
     </div>
     <div class="btn">
       <button type="button">
-        <h2 class="btn-text">모두 확인하기</h2>
+        <h2 class="btn-text">VIEW ALL NEWS</h2>
         <span class="material-icons">
           arrow_right_alt
         </span>
@@ -259,7 +247,7 @@
     </div>
   </section>
   <section class="con-3">
-    <iframe width="100%" height="450" src="https://www.youtube.com/embed/iclLe7GECZ0" title="B Roll video for Upholstered Furniture Production (shot on Panasonic GH5 / S5 cameras)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="100%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA" title="neon infinity logo design in figma | logo design in figma" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </section>
   <section class="inner con-text">
     <h1 class="c-title">
@@ -343,28 +331,28 @@
           business_center
         </span>
         <h2 class="bg-sub-title">FINISHED PROJECTS</h2>
-        <h1 class="bg-main-title">4672</h1>
+        <h1 class="bg-main-title" id="counter1">0</h1>
       </div>
       <div class="bg-item">
         <span class="material-icons">
           photo_camera
         </span>
         <h2 class="bg-sub-title">PHOTOGRAHS</h2>
-        <h1 class="bg-main-title">5752</h1>
+        <h1 class="bg-main-title" id="counter2">0</h1>
       </div>
       <div class="bg-item">
         <span class="material-icons">
           logo_dev
         </span>
         <h2 class="bg-sub-title">LOGO DEV</h2>
-        <h1 class="bg-main-title">2522</h1>
+        <h1 class="bg-main-title" id="counter3">0</h1>
       </div>
       <div class="bg-item">
         <span class="material-icons">
           local_cafe
         </span>
         <h2 class="bg-sub-title">COPS OF COFFEE</h2>
-        <h1 class="bg-main-title">3539</h1>
+        <h1 class="bg-main-title" id="counter4">0</h1>
       </div>
     </div>
   </section>
@@ -430,15 +418,23 @@
         <h2 class="sub-title">Lorem ipsum dolor sit amet consectetur  adipisicing elit. Eveniet alias, praesentium<br>
           adipisicing elit. Eveniet alias adipisicing elit. Eveniet alias  Eveniet alias, 
         </h2>
-        <textarea class="input-group">
-          <input type="text" class="top-text" placeholder="NAME">
-          <input type="text" class="top-text" placeholder="EMAIL">
-          <input type="text" class="top-text" placeholder="SUBJECT">
-          <input type="text" class="bottom-text" placeholder="MESSAGE">
-        </textarea>
+        <div class="text-top-group">
+          <textarea class="text-top" placeholder="Name"></textarea>
+          <textarea class="text-top" placeholder="Email"></textarea>
+          <textarea class="text-top" placeholder="Subject"></textarea>
+          <textarea class="text-bottom" placeholder="Message"></textarea>
+        </div>
+        <div class="inner btn-5">
+          <button type="button">
+          <h2 class="btn-text">SAND TO GO </h2>
+          </button>
       </div>
+  </div>
     </div>
   </section>
+  <footer class="inner">
+
+  </footer>
   <!-- 푸터 영역 -->
   <!-- 스크롤 이벤트 (SCROLL TO TOP) -->
 <div id="to-top">
