--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide page page-1">
+        <!-- 연습 SVG 텍스트 포함 -->
+        <!-- 
+          <div class="swiper-slide page page-1">
           <div class="page-1-left">
             <div class="page-1-icons">
               <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -242,13 +244,27 @@
               </h2>
             </div> 
           </div>
-        </div>  
+        </div>           
+        -->
+        <div class="swiper-slide page page1">
+          <img src="/img/pawel-czerwinski-HkAy-PdSqeA-unsplash (2).jpg" alt="">
+          <div class="cover">
+          </div>
+          <iframe width="50%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA "></iframe>
+        </div>
+        <div class="swiper-slide page page2">
+          <img src="/img/pawel-czerwinski-SVVCP23JFyg-unsplash (2).jpg" alt="">
+        </div>
+        <div class="swiper-slide page page3">
+          <img src="/img/pawel-czerwinski-vI5XwPbGvmY-unsplash (2).jpg" alt="">
+        </div>
       </div>
+      <div class="swiper-pagination"></div>
     </div>
   </section>
-  <section class="con-3">
+  <!-- <section class="con-3">
     <iframe width="100%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA" title="neon infinity logo design in figma | logo design in figma" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </section>
+  </section> -->
   <section class="inner con-text">
     <h1 class="c-title">
       THIS IS A CALLL TO ACTION
