--- a/index.html
+++ b/index.html
@@ -69,14 +69,25 @@
           <stop offset="1" stop-color="#FF1B6B"/>
           </linearGradient>
           </defs>
-          </svg>
-          
+          </svg>     
       </div>
       <div class="header-menu">
         <ul class="menu">
           <li>Info</li>
-          <li>Service</li>
-          <li>Store</li>
+          <li>Service<svg width="10" height="8" viewBox="0 0 8 6" class="figma-1vkg3ei"><path d="M4 6L0.535898 0L7.4641 0L4 6Z" fill="currentColor"></path></svg>
+            <ul class="sub-menu">
+              <li><a href="#"><span>Overview</span></a></li>
+              <li><a href="#"><span>Customers</span></a></li>
+              <li><a href="#"><span>Contact Sales</span></a></li>
+            </ul>
+          </li>
+          <li>Store<svg width="10" height="8" viewBox="0 0 8 6" class="figma-1vkg3ei"><path d="M4 6L0.535898 0L7.4641 0L4 6Z" fill="currentColor"></path></svg>
+            <ul class="sub-menu">
+              <li><a href="#"><span>Overview</span></a></li>
+              <li><a href="#"><span>Customers</span></a></li>
+              <li><a href="#"><span>Contact Sales</span></a></li>
+            </ul>
+          </li>
           <li>History</li>
           <li>Community</li>
         </ul>
@@ -442,14 +453,77 @@
         </div>
         <div class="inner btn-5">
           <button type="button">
-          <h2 class="btn-text">SAND TO GO </h2>
+          <h2 class="btn-text">VIEW ALL WORK</h2>
           </button>
       </div>
   </div>
     </div>
   </section>
-  <footer class="inner">
-
+  <section class="inner practice">
+    <div class="swiper-t">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide">
+          <img src="/img/img-1.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="/img/img-2.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="/img/img-3.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="/img/img-4.jpg" alt="">
+        </div>
+        <div class="swiper-slide">
+          <img src="/img/img-5.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="footer-section inner">
+      <div class="footer-left">
+        <h1>KEEP IN TOUCH<br> WITH US</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur<br>
+          adipisicing elit. Laboriosam recusandae<br>
+          dolores assumenda,laudantium</p>
+        <div class="input-group">
+          <input type="text" class="f-left" placeholder="email">
+          <button class="f-right">SEND</button>
+        </div>
+      </div>
+      <div class="footer-right">
+        <ul class="f-menu">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">WORK</a></li>
+          <li><a href="#">PORTFOLIO</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+        <ul class="f-utility">
+          <li>
+            <span class="material-icons">forward_to_inbox</span>
+            <a href="#">KIMSEGON.97@NAVER.COM</a>
+          </li>
+          <li>
+            <span class="material-icons">location_on</span>
+            <a href="#">SOUTH KOREA. INCHEON</a>
+          </li>
+          <li>
+            <span class="material-icons">call</span>
+            <a href="#">(032)437-4399</a>
+          </li>
+          <div class="sns">
+            <span class="material-icons">workspaces</span>
+            <span class="material-icons">forest</span>
+            <span class="material-icons">psychology_alt</span>
+            <span class="material-icons">cyclone</span>
+          </div>
+        </ul>
+      </div>
+    </div>
   </footer>
   <!-- 푸터 영역 -->
   <!-- 스크롤 이벤트 (SCROLL TO TOP) -->
