--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 </head>
 <body>
-
+  <div class="fp-arrow"></div>
+  <div class="fp-arrow"></div>
   <!-- 헤더 영역 -->
   <header>
     <div class="inner h-section">
@@ -104,12 +105,6 @@
 
   <!-- 섹션 영역 -->
   <section class="inner con-1">
-    <!-- <div class="scroll">
-      <h2>scroll down</h2>
-      <svg class="mouse" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M8 3C8.27614 3 8.5 3.22386 8.5 3.5V5.5C8.5 5.77614 8.27614 6 8 6C7.72386 6 7.5 5.77614 7.5 5.5V3.5C7.5 3.22386 7.72386 3 8 3ZM12 11C12 13.2091 10.2091 15 8 15C5.79086 15 4 13.2091 4 11V5C4 2.79086 5.79086 1 8 1C10.2091 1 12 2.79086 12 5V11ZM8 0C5.23858 0 3 2.23858 3 5V11C3 13.7614 5.23858 16 8 16C10.7614 16 13 13.7614 13 11V5C13 2.23858 10.7614 0 8 0Z" fill="#32323B"/>
-        </svg>      
-    </div> -->
     <div class="con-1-text">
       <h1 class="title">
         Professional Web Tips
@@ -261,7 +256,7 @@
           <img src="/img/pawel-czerwinski-HkAy-PdSqeA-unsplash (2).jpg" alt="">
           <div class="cover">
           </div>
-          <iframe width="50%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA "></iframe>
+          <iframe width="100%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA "></iframe>
         </div>
         <div class="swiper-slide page page2">
           <img src="/img/pawel-czerwinski-SVVCP23JFyg-unsplash (2).jpg" alt="">
