--- a/index.html
+++ b/index.html
@@ -129,148 +129,40 @@
     <div class="con-1-img">
       <img src="./img/main-visual.png" alt="">
     </div>
+    <div class="animated-title">
+      <div class="track">
+        <div class="content">
+          &nbsp;Srolln ones cuture People&nbsp;Srolln ones cuture People&nbsp;SEONG DESIGN CUTURE PEOPLE&nbsp;Srolln ones cuture People&nbsp;SEONG DESIGN CUTURE PEOPLE&nbsp;Srolln ones cuture People
+        </div>
+      </div>
+    </div>
   </section>
   <section class="inner con-2">
     <div class="swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <!-- 연습 SVG 텍스트 포함 -->
-        <!-- 
-          <div class="swiper-slide page page-1">
-          <div class="page-1-left">
-            <div class="page-1-icons">
-              <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M42.5 31.875C42.5 26.007 47.257 21.25 53.125 21.25H116.875C122.743 21.25 127.5 26.007 127.5 31.875V63.75C127.5 69.618 122.743 74.375 116.875 74.375H53.125C47.257 74.375 42.5 69.618 42.5 63.75V31.875ZM53.125 31.875V63.75H116.875V31.875H53.125Z" fill="#EEEFF1"/>
-                <path d="M85 127.5C90.868 127.5 95.625 122.743 95.625 116.875C95.625 111.007 90.868 106.25 85 106.25C79.132 106.25 74.375 111.007 74.375 116.875C74.375 122.743 79.132 127.5 85 127.5Z" fill="#EEEFF1"/>
-                <path d="M116.875 116.875C116.875 134.479 102.604 148.75 85 148.75C67.3959 148.75 53.125 134.479 53.125 116.875C53.125 99.2709 67.3959 85 85 85C102.604 85 116.875 99.2709 116.875 116.875ZM85 138.125C96.7361 138.125 106.25 128.611 106.25 116.875C106.25 105.139 96.7361 95.625 85 95.625C73.264 95.625 63.75 105.139 63.75 116.875C63.75 128.611 73.264 138.125 85 138.125Z" fill="#EEEFF1"/>
-                <path d="M21.25 21.25C21.25 9.51395 30.7639 0 42.5 0H127.5C139.236 0 148.75 9.51395 148.75 21.25V148.75C148.75 160.486 139.236 170 127.5 170H42.5C30.764 170 21.25 160.486 21.25 148.75V21.25ZM42.5 10.625C36.632 10.625 31.875 15.382 31.875 21.25V148.75C31.875 154.618 36.632 159.375 42.5 159.375H127.5C133.368 159.375 138.125 154.618 138.125 148.75V21.25C138.125 15.382 133.368 10.625 127.5 10.625H42.5Z" fill="#EEEFF1"/>
-              </svg>
-            </div>
-            <div class="page-1-text">
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit amet consectetur<br>
-                adipisicing elit. Eveniet
-              </h2>
-              <h1 class="page-main-text">
-                MUSIC - PLAYER
-              </h1>
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit a
-              </h2>
-            </div> 
-          </div>
-          <div class="page-1-right">
-            <div class="page-1-icons">
-              <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M42.5 31.875C42.5 26.007 47.257 21.25 53.125 21.25H116.875C122.743 21.25 127.5 26.007 127.5 31.875V63.75C127.5 69.618 122.743 74.375 116.875 74.375H53.125C47.257 74.375 42.5 69.618 42.5 63.75V31.875ZM53.125 31.875V63.75H116.875V31.875H53.125Z" fill="#EEEFF1"/>
-                <path d="M85 127.5C90.868 127.5 95.625 122.743 95.625 116.875C95.625 111.007 90.868 106.25 85 106.25C79.132 106.25 74.375 111.007 74.375 116.875C74.375 122.743 79.132 127.5 85 127.5Z" fill="#EEEFF1"/>
-                <path d="M116.875 116.875C116.875 134.479 102.604 148.75 85 148.75C67.3959 148.75 53.125 134.479 53.125 116.875C53.125 99.2709 67.3959 85 85 85C102.604 85 116.875 99.2709 116.875 116.875ZM85 138.125C96.7361 138.125 106.25 128.611 106.25 116.875C106.25 105.139 96.7361 95.625 85 95.625C73.264 95.625 63.75 105.139 63.75 116.875C63.75 128.611 73.264 138.125 85 138.125Z" fill="#EEEFF1"/>
-                <path d="M21.25 21.25C21.25 9.51395 30.7639 0 42.5 0H127.5C139.236 0 148.75 9.51395 148.75 21.25V148.75C148.75 160.486 139.236 170 127.5 170H42.5C30.764 170 21.25 160.486 21.25 148.75V21.25ZM42.5 10.625C36.632 10.625 31.875 15.382 31.875 21.25V148.75C31.875 154.618 36.632 159.375 42.5 159.375H127.5C133.368 159.375 138.125 154.618 138.125 148.75V21.25C138.125 15.382 133.368 10.625 127.5 10.625H42.5Z" fill="#EEEFF1"/>
-              </svg>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide page page-2">
-          <div class="page-1-right">
-            <div class="page-1-icons">
-              <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M42.5 31.875C42.5 26.007 47.257 21.25 53.125 21.25H116.875C122.743 21.25 127.5 26.007 127.5 31.875V63.75C127.5 69.618 122.743 74.375 116.875 74.375H53.125C47.257 74.375 42.5 69.618 42.5 63.75V31.875ZM53.125 31.875V63.75H116.875V31.875H53.125Z" fill="#EEEFF1"/>
-                <path d="M85 127.5C90.868 127.5 95.625 122.743 95.625 116.875C95.625 111.007 90.868 106.25 85 106.25C79.132 106.25 74.375 111.007 74.375 116.875C74.375 122.743 79.132 127.5 85 127.5Z" fill="#EEEFF1"/>
-                <path d="M116.875 116.875C116.875 134.479 102.604 148.75 85 148.75C67.3959 148.75 53.125 134.479 53.125 116.875C53.125 99.2709 67.3959 85 85 85C102.604 85 116.875 99.2709 116.875 116.875ZM85 138.125C96.7361 138.125 106.25 128.611 106.25 116.875C106.25 105.139 96.7361 95.625 85 95.625C73.264 95.625 63.75 105.139 63.75 116.875C63.75 128.611 73.264 138.125 85 138.125Z" fill="#EEEFF1"/>
-                <path d="M21.25 21.25C21.25 9.51395 30.7639 0 42.5 0H127.5C139.236 0 148.75 9.51395 148.75 21.25V148.75C148.75 160.486 139.236 170 127.5 170H42.5C30.764 170 21.25 160.486 21.25 148.75V21.25ZM42.5 10.625C36.632 10.625 31.875 15.382 31.875 21.25V148.75C31.875 154.618 36.632 159.375 42.5 159.375H127.5C133.368 159.375 138.125 154.618 138.125 148.75V21.25C138.125 15.382 133.368 10.625 127.5 10.625H42.5Z" fill="#EEEFF1"/>
-              </svg>
-            </div>
-          </div>
-          <div class="page-1-left">
-            <div class="page-1-icons">
-              <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M42.5 31.875C42.5 26.007 47.257 21.25 53.125 21.25H116.875C122.743 21.25 127.5 26.007 127.5 31.875V63.75C127.5 69.618 122.743 74.375 116.875 74.375H53.125C47.257 74.375 42.5 69.618 42.5 63.75V31.875ZM53.125 31.875V63.75H116.875V31.875H53.125Z" fill="#EEEFF1"/>
-                <path d="M85 127.5C90.868 127.5 95.625 122.743 95.625 116.875C95.625 111.007 90.868 106.25 85 106.25C79.132 106.25 74.375 111.007 74.375 116.875C74.375 122.743 79.132 127.5 85 127.5Z" fill="#EEEFF1"/>
-                <path d="M116.875 116.875C116.875 134.479 102.604 148.75 85 148.75C67.3959 148.75 53.125 134.479 53.125 116.875C53.125 99.2709 67.3959 85 85 85C102.604 85 116.875 99.2709 116.875 116.875ZM85 138.125C96.7361 138.125 106.25 128.611 106.25 116.875C106.25 105.139 96.7361 95.625 85 95.625C73.264 95.625 63.75 105.139 63.75 116.875C63.75 128.611 73.264 138.125 85 138.125Z" fill="#EEEFF1"/>
-                <path d="M21.25 21.25C21.25 9.51395 30.7639 0 42.5 0H127.5C139.236 0 148.75 9.51395 148.75 21.25V148.75C148.75 160.486 139.236 170 127.5 170H42.5C30.764 170 21.25 160.486 21.25 148.75V21.25ZM42.5 10.625C36.632 10.625 31.875 15.382 31.875 21.25V148.75C31.875 154.618 36.632 159.375 42.5 159.375H127.5C133.368 159.375 138.125 154.618 138.125 148.75V21.25C138.125 15.382 133.368 10.625 127.5 10.625H42.5Z" fill="#EEEFF1"/>
-              </svg>
-            </div>
-            <div class="page-1-text">
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit amet consectetur<br>
-                adipisicing elit. Eveniet
-              </h2>
-              <h1 class="page-main-text">
-                MUSIC - PLAYER
-              </h1>
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit a
-              </h2>
-            </div> 
-          </div>
-        </div> 
-        <div class="swiper-slide page page-3">
-          <div class="page-1-left">
-            <div class="page-1-icons">
-              <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M42.5 31.875C42.5 26.007 47.257 21.25 53.125 21.25H116.875C122.743 21.25 127.5 26.007 127.5 31.875V63.75C127.5 69.618 122.743 74.375 116.875 74.375H53.125C47.257 74.375 42.5 69.618 42.5 63.75V31.875ZM53.125 31.875V63.75H116.875V31.875H53.125Z" fill="#EEEFF1"/>
-                <path d="M85 127.5C90.868 127.5 95.625 122.743 95.625 116.875C95.625 111.007 90.868 106.25 85 106.25C79.132 106.25 74.375 111.007 74.375 116.875C74.375 122.743 79.132 127.5 85 127.5Z" fill="#EEEFF1"/>
-                <path d="M116.875 116.875C116.875 134.479 102.604 148.75 85 148.75C67.3959 148.75 53.125 134.479 53.125 116.875C53.125 99.2709 67.3959 85 85 85C102.604 85 116.875 99.2709 116.875 116.875ZM85 138.125C96.7361 138.125 106.25 128.611 106.25 116.875C106.25 105.139 96.7361 95.625 85 95.625C73.264 95.625 63.75 105.139 63.75 116.875C63.75 128.611 73.264 138.125 85 138.125Z" fill="#EEEFF1"/>
-                <path d="M21.25 21.25C21.25 9.51395 30.7639 0 42.5 0H127.5C139.236 0 148.75 9.51395 148.75 21.25V148.75C148.75 160.486 139.236 170 127.5 170H42.5C30.764 170 21.25 160.486 21.25 148.75V21.25ZM42.5 10.625C36.632 10.625 31.875 15.382 31.875 21.25V148.75C31.875 154.618 36.632 159.375 42.5 159.375H127.5C133.368 159.375 138.125 154.618 138.125 148.75V21.25C138.125 15.382 133.368 10.625 127.5 10.625H42.5Z" fill="#EEEFF1"/>
-              </svg>
-            </div>
-            <div class="page-1-text">
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit amet consectetur<br>
-                adipisicing elit. Eveniet
-              </h2>
-              <h1 class="page-main-text">
-                MUSIC - PLAYER
-              </h1>
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit a
-              </h2>
-            </div> 
-          </div>
-          <div class="page-1-left">
-            <div class="page-1-icons">
-              <svg width="170" height="170" viewBox="0 0 170 170" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M42.5 31.875C42.5 26.007 47.257 21.25 53.125 21.25H116.875C122.743 21.25 127.5 26.007 127.5 31.875V63.75C127.5 69.618 122.743 74.375 116.875 74.375H53.125C47.257 74.375 42.5 69.618 42.5 63.75V31.875ZM53.125 31.875V63.75H116.875V31.875H53.125Z" fill="#EEEFF1"/>
-                <path d="M85 127.5C90.868 127.5 95.625 122.743 95.625 116.875C95.625 111.007 90.868 106.25 85 106.25C79.132 106.25 74.375 111.007 74.375 116.875C74.375 122.743 79.132 127.5 85 127.5Z" fill="#EEEFF1"/>
-                <path d="M116.875 116.875C116.875 134.479 102.604 148.75 85 148.75C67.3959 148.75 53.125 134.479 53.125 116.875C53.125 99.2709 67.3959 85 85 85C102.604 85 116.875 99.2709 116.875 116.875ZM85 138.125C96.7361 138.125 106.25 128.611 106.25 116.875C106.25 105.139 96.7361 95.625 85 95.625C73.264 95.625 63.75 105.139 63.75 116.875C63.75 128.611 73.264 138.125 85 138.125Z" fill="#EEEFF1"/>
-                <path d="M21.25 21.25C21.25 9.51395 30.7639 0 42.5 0H127.5C139.236 0 148.75 9.51395 148.75 21.25V148.75C148.75 160.486 139.236 170 127.5 170H42.5C30.764 170 21.25 160.486 21.25 148.75V21.25ZM42.5 10.625C36.632 10.625 31.875 15.382 31.875 21.25V148.75C31.875 154.618 36.632 159.375 42.5 159.375H127.5C133.368 159.375 138.125 154.618 138.125 148.75V21.25C138.125 15.382 133.368 10.625 127.5 10.625H42.5Z" fill="#EEEFF1"/>
-              </svg>
-            </div>
-            <div class="page-1-text">
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit amet consectetur<br>
-                adipisicing elit. Eveniet
-              </h2>
-              <h1 class="page-main-text">
-                MUSIC - PLAYER
-              </h1>
-              <h2 class="page-sub-text">
-                Lorem ipsum dolor sit a
-              </h2>
-            </div> 
-          </div>
-        </div>           
-        -->
         <div class="swiper-slide page page1">
-          <img src="/img/pawel-czerwinski-HkAy-PdSqeA-unsplash (2).jpg" alt="">
-          <div class="cover">
-          </div>
-          <iframe width="100%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA "></iframe>
+          <video autoplay muted loop width="100%" height="auto">
+            <source src="/video/guy.mp4">
+          </video>
         </div>
         <div class="swiper-slide page page2">
-          <img src="/img/pawel-czerwinski-SVVCP23JFyg-unsplash (2).jpg" alt="">
+          <video autoplay muted loop width="100%" height="auto">
+            <source src="/video/beach.mp4">
+          </video>
         </div>
         <div class="swiper-slide page page3">
-          <img src="/img/pawel-czerwinski-vI5XwPbGvmY-unsplash (2).jpg" alt="">
+          <video autoplay muted loop width="100%" height="auto">
+            <source src="/video/toropical.mp4">
+          </video>
         </div>
       </div>
-      <div class="swiper-pagination"></div>
+        <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
   </section>
-  <!-- <section class="con-3">
-    <iframe width="100%" height="450" src="https://www.youtube.com/embed/k_LaZ1YwdPA" title="neon infinity logo design in figma | logo design in figma" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </section> -->
   <section class="inner con-text">
     <h1 class="c-title">
       THIS IS A CALLL TO ACTION
@@ -500,7 +392,7 @@
         <ul class="f-utility">
           <li>
             <span class="material-icons">forward_to_inbox</span>
-            <a href="#">KIMSEGON.97@NAVER.COM</a>
+            <a href="#">KIMSENGWON.97@NAVER.COM</a>
           </li>
           <li>
             <span class="material-icons">location_on</span>
